--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "cd .. && npm run dev"
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
