--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
