--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "multer": "^1.4.5-lts.2",
     "prisma": "^5.22.0",
     "react-icons": "^5.5.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
