--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
+    "@types/socket.io-client": "^1.4.36",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
@@ -20,7 +21,9 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
+    "use-sound": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
