--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/socket.io-client": "^1.4.36",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "prisma": "^5.22.0",
     "react-icons": "^5.5.0",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "use-sound": "^5.0.0"
   },
   "devDependencies": {
