--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-icons": "^5.5.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "use-sound": "^5.0.0"
+    "use-sound": "^5.0.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
