--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@socket.io/component-emitter": "^3.1.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -21,7 +22,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
-    "socket.io-client": "^4.8.1",
+    "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
     "use-sound": "^5.0.0",
     "web-vitals": "^2.1.4"
