--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@types/socket.io-client": "^1.4.36",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
     "ws": "^8.18.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.10"
   }
