--- a/web/package.json
+++ b/web/package.json
@@ -56,9 +56,11 @@
   "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "vite": "^4.0.0"
   },
   "proxy": "http://localhost:3333"
 }
