--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "pdfkit": "^0.17.1",
     "prisma": "^5.22.0",
     "react-icons": "^5.5.0",
     "socket.io": "^4.8.1",
