--- a/web/package.json
+++ b/web/package.json
@@ -21,8 +21,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^7.6.0",
+    "react-icons": "^4.12.0",    "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
@@ -35,8 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "react-scripts start"
-  },
-  "eslintConfig": {
+  },"eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
@@ -53,15 +51,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
+  },  "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.3",
-    "vite": "^4.0.0"
+    "tailwindcss": "^3.4.3"
   },
   "proxy": "http://localhost:3333"
 }
