--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
